new secrets added.

--- a/notebooks/Trade on KuCoin.ipynb
+++ b/notebooks/Trade on KuCoin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,18 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class KCClient():\n",
-    "    def __init__(self, agent):\n",
-    "        self.API_SECRET = '26089ed9-e0a9-4c7e-b355-b9cd41e2bd6d'\n",
+    "    def __init__(self, agent, secrets='../secrets.txt'):\n",
+    "        self.API_KEY, self.API_SECRET = self.__setup_key(secrets)\n",
     "        self.url = 'https://api.kucoin.com'\n",
     "        self.agent = agent\n",
     "        self.session = requests.session()\n",
+    "    \n",
+    "    def __setup_key(self, secrets):\n",
+    "        with open(secrets) as f:          \n",
+    "            key = str(f.readline().split(':')[1]).replace('\\n', '')\n",
+    "            secret = str(f.readline().split(':')[1]).replace('\\n', '')\n",
+    "        return key, secret\n",
     "    \n",
     "    def get_ticker_price(self, symbol):\n",
     "        request = Request('{}/open/tick?symbol={}'.format(self.url, symbol))\n",
@@ -64,7 +70,7 @@
     "            'User-Agent': 'python-kucoin',\n",
     "            'HTTP_ACCEPT_LANGUAGE': 'en-US',\n",
     "            'Accept-Language': 'en-US',\n",
-    "            'KC-API-KEY': '5a5403f96d581b54c6e60c09',\n",
+    "            'KC-API-KEY': self.API_KEY,\n",
     "            'KC-API-NONCE': str(nonce),\n",
     "            'KC-API-SIGNATURE': self.generate_signature(endpoint, data, nonce),\n",
     "        }\n",
@@ -89,26 +95,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'KCTrader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-475fe2326441>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKCTrader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m trader.order_asset({\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m'symbol'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'ETH-BTC'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'type'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'BUY'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m'amount'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'1'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'KCTrader' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-10-1cd5d8ffc8ad>(13)__setup_key()\n",
+      "-> return key, secret\n",
+      "(Pdb) key\n",
+      "'5a5491a76a4c261f402f8300'\n",
+      "(Pdb) secret\n",
+      "'722d603a-636a-407a-8a58-3688970edb8d'\n",
+      "(Pdb) c\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{u'code': u'NO_BALANCE',\n",
+       " u'data': {u'actual': 0.0, u'coinType': u'BTC', u'expect': 1e-06},\n",
+       " u'msg': u'Insufficient balance: BTC',\n",
+       " u'success': False,\n",
+       " u'timestamp': 1515492737097}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "trader = KCTrader('')\n",
-    "trader.order_asset({\n",
+    "client = KCClient('')\n",
+    "client.order_asset({\n",
     "    'symbol': 'ETH-BTC', \n",
     "    'type': 'BUY', \n",
     "    'amount': '1', \n",
