--- a/notebooks/Trade on KuCoin.ipynb
+++ b/notebooks/Trade on KuCoin.ipynb
@@ -2869,22 +2869,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-47-db6e6b2acd04>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-db6e6b2acd04>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    \"\"\"\u001b[0m\n\u001b[0m       \n^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class KCTrader():\n",
+    "\n",
     "    def __init__(self, num_assets, p_init, commission_rate, min_trade_amount=1e-4):\n",
     "        self.w_prev = np.eye(num_assets)[0]\n",
     "        self.p_prev = p_init\n",
@@ -2892,22 +2884,22 @@
     "        self.client = KCTrader()\n",
     "        self.min_trade_amount = min_trade_amount\n",
     "        \n",
-    "    @static\n",
+    "    @staticmethod\n",
     "    def calculate_mu(w1, w0, commission_rate):\n",
-    "    \"\"\"\n",
-    "    @:param w1: target portfolio vector, first element is btc\n",
-    "    @:param w0: rebalanced last period portfolio vector, first element is btc\n",
-    "    @:param commission_rate: rate of commission fee, proportional to the transaction cost\n",
-    "    \"\"\"\n",
-    "    mu0 = 1\n",
-    "    mu1 = 1 - 2*commission_rate + commission_rate ** 2\n",
-    "    while abs(mu1-mu0) > 1e-10:\n",
-    "        mu0 = mu1\n",
-    "        mu1 = (1 - commission_rate * w0[0] -\n",
-    "            (2 * commission_rate - commission_rate ** 2) *\n",
-    "            np.sum(np.maximum(w0[1:] - mu1*w1[1:], 0))) / \\\n",
-    "            (1 - commission_rate * w1[0])\n",
-    "    return mu1\n",
+    "        \"\"\"\n",
+    "        @:param w1: target portfolio vector, first element is btc\n",
+    "        @:param w0: rebalanced last period portfolio vector, first element is btc\n",
+    "        @:param commission_rate: rate of commission fee, proportional to the transaction cost\n",
+    "        \"\"\"\n",
+    "        mu0 = 1\n",
+    "        mu1 = 1 - 2*commission_rate + commission_rate ** 2\n",
+    "        while abs(mu1-mu0) > 1e-10:\n",
+    "            mu0 = mu1\n",
+    "            mu1 = (1 - commission_rate * w0[0] -\n",
+    "                (2 * commission_rate - commission_rate ** 2) *\n",
+    "                np.sum(np.maximum(w0[1:] - mu1*w1[1:], 0))) / \\\n",
+    "                (1 - commission_rate * w1[0])\n",
+    "        return mu1\n",
     " \n",
     "    def process_w(w):\n",
     "        \"\"\"\n",
@@ -2942,10 +2934,6 @@
     "                 'type': 'BUY' if d_s[i] > 0 else 'SELL', \n",
     "                 'amount': d_s[i], \n",
     "                 'price': client.get_price(asset)})\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n",
     "        "
    ]
   },
